Fixing the endpoints so the tests can pass